# qtservice

./: CMakeLists.txt  ProjectConfig.cmake.in  qtservice_win.cpp
